[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = [
    "cryptography",
    "authentication",
    "no-std",
    "algorithms",
]
description = """BLS signature implementation according to the IETF spec on the BLS12-381 curve."""
documentation = "https://docs.rs/blsful"
edition = "2024"
homepage = "https://github.com/LF-Decentralized-Trust-labs/agora-blsful"
keywords = ["crypto", "signature", "signing", "bls"]
license = "MIT OR Apache-2.0"
name = "blsful"
readme = "README.md"
repository = "https://github.com/LF-Decentralized-Trust-labs/agora-blsful"
version = "4.0.0-rc0"

[features]
default = ["blst"]
rust = ["bls12_381_plus/alloc", "bls12_381_plus/expose-fields"]
blst = ["blstrs_plus", "blstrs_plus/expose-fields"]

[dependencies]
anyhow = "1.0"
bls12_381_plus =  { version = "0.9.0-rc0", optional = true }
blstrs_plus = { version = "0.9.0-rc0", optional = true}
hex = "0.4"
hkdf = { version = "0.13", default-features = false }
merlin = "3"
rand = "0.10"
rand_core = "0.10"
rand_chacha = "0.10"
serde = { version = "1.0", features = ["alloc", "derive"] }
serde_bare = "0.5"
sha2 = { version = "0.11", default-features = false }
sha2_010 = { package = "sha2", version = "0.10", default-features = false }
shake = { version = "0.1", default-features = false }
subtle = { version = "2.6", default-features = false }
thiserror = "2.0"
uint-zigzag = { version = "0.2", features = ["std"] }
vsss-rs = { version = "6.0.0-rc1", features = ["serde"]  }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
rstest = "0.23"
rand_xorshift = "0.5"
serde_json = { version = "1.0", features = ["alloc"] }
